--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 			</p>
 
+			<!-- /* CIKM */ -->
+			<p>
+				Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
 			<!-- /* VLDB */ -->
 
 
@@ -813,7 +820,7 @@
 		class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2024.6.19
+				Rong-Hua Li</a> | 更新时间2024.7.20
 		</div>
 	</div>
 	<!-- end of footer -->
