--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1070,6 +1070,13 @@ border="0" cellpadding="0">
 					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 				</p>
+
+		    		<!-- /* CIKM */ -->
+				<p>
+					Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
+					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				</p>
 	
 				<!-- /* VLDB */ -->
 	
