--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1043,61 +1043,71 @@ border="0" cellpadding="0">
     <TD style="padding: 0.75pt;">
       <P class="MsoNormal"><B><SPAN lang="EN-US" style='font-size: 18pt; mso-fareast-font-family: "Times New Roman";'>Selected Papers</SPAN></B><SPAN lang="EN-US" style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
             <div id="papers" >
-				<!-- /* 顺序：PODS,SIGMOD,VLDB,ICDE,AAAI,WWW */ -->
-	
+	<!-- /* 顺序：PODS,SIGMOD,VLDB,ICDE,AAAI,WWW */ -->
+		
+	<!-- /* 2024.8.24更新 */ -->
 
-	<!-- /* 2024.6.19更新 */ -->
-	
 	<!-- /* 2025年 */ -->
-				<!-- /* Accepted */ -->
-				<p>
-					Yuchen Meng, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Xiang Wu, Huanzhong Duan, Yanxiong Lu, Guoren Wang. Encoding Group Interests with Persistent Homology for Personalized Search. IEEE Transactions on Systems, Man, and Cybernetics: Systems (Accepted).
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-				</p>
-				<p>
-					Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous Graph Based Hawkes Process. IEEE Transactions on Big Data (Accepted).
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-				</p>
-	
-				<!-- /* PODS */ -->
-				
-	
-				<!-- /* SIGMOD */ -->
-				<p>
-					Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Guoren Wang. Theoretically and Practically Efficient Maximum Defective Clique Search. SIGMOD 2025.
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-				</p>
+			<!-- /* Accepted */ -->
+			<p>
+				Yuchen Meng, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Xiang Wu, Huanzhong Duan, Yanxiong Lu, Guoren Wang. Encoding Group Interests with Persistent Homology for Personalized Search. IEEE Transactions on Systems, Man, and Cybernetics: Systems (Accepted).
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+			<p>
+				Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous Graph Based Hawkes Process. IEEE Transactions on Big Data (Accepted).
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
 
-		    		<!-- /* CIKM */ -->
-				<p>
-					Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-				</p>
+			<!-- /* PODS */ -->
+			
+
+			<!-- /* SIGMOD */ -->
+			<p>
+				Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Guoren Wang. Theoretically and Practically Efficient Maximum Defective Clique Search. SIGMOD 2025.
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<p>
+				Lantian Xu, Dong Wen, Lu Qin, <strong>Rong-Hua Li</strong>, Ying Zhang, Xuemin Lin. Constant-time Connectivity Querying in Dynamic Graphs. SIGMOD 2025.
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<!-- /* VLDB */ -->
+			<p>
+				Yuchen Meng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Xunkai Li, Guoren Wang. Topology-preserving Graph Coarsening: An Elementary Collapse-based Approach. VLDB 2025.
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+
+			<!-- /* CIKM */ -->
+			<p>
+				Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
+				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<!-- /* ICDE */ -->
+
+
+			<!-- /* AAAI */ -->
+
+
+			<!-- /* WWW */ -->
+
+
+			<!-- /* TKDE */ -->
+
+
+			<!-- /* IJCAI */ -->
+
+		<!-- 2025更新完毕 --> 
 	
-				<!-- /* VLDB */ -->
-	
-	
-				<!-- /* ICDE */ -->
-	
-	
-				<!-- /* AAAI */ -->
-	
-	
-				<!-- /* WWW */ -->
-	
-	
-				<!-- /* TKDE */ -->
-	
-	
-				<!-- /* IJCAI */ -->
-	
-	<!-- 2025更新完毕 --> 
-	
-	<!-- /* 2024年 */ -->
+		<!-- /* 2024年 */ -->
 				<!-- /* Accepted */ -->
 	
 				<!-- /* PODS */ -->
