--- a/groupPhotos.html
+++ b/groupPhotos.html
@@ -274,6 +274,33 @@ h2 {
 						</li>
 					</ul>
 				</div>
+
+				<h2>最近一年</h2>
+				<div class="black_cline"></div>
+				<div class="piclist">
+					<ul>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/910.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/graduate.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/vldb.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/910p.jpg" title="（李老师是p的）" /></div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 	    </div>
 	</div>
