--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
 				<p><strong>欢迎有意加入本课题组的人员发邮件咨询： lironghuabit@126.com</strong> </p>
 			</div>
 
+			<div class="con01_t" style="font-size: 24px; color: red; font-weight: bold;">
+				<h4 style="color:rgb(255, 0, 0)">News</h4> 
+				<p>
+					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/图机器学习入门Tutorial.pdf" >这个文档</a>。
+				</p>
+			</div>
+			
+
 			<div class="con01_t">
 				<h4>课题组主要成员&nbsp;&nbsp;&nbsp;&nbsp;<a href="./groupPhotos.html">(师生合影)</a></h4>
 				<p>
@@ -831,7 +839,7 @@
 		class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2024.8.24
+				Rong-Hua Li</a> | 更新时间2024.9.19
 		</div>
 	</div>
 	<!-- end of footer -->
