--- a/groupPhotos.html
+++ b/groupPhotos.html
@@ -296,7 +296,7 @@ h2 {
 						</li>
 						<li class="pic">
 							<div class="in">
-								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/910p.jpg" title="（李老师是p的）" /></div>
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2024/910p.jpg" /></div>
 							</div>
 						</li>
 					</ul>
