--- a/index.html
+++ b/index.html
@@ -131,11 +131,8 @@
 					<span style="color:rgb(65, 105, 255)">3. 长期招聘本科实习生，进入课题组的本科生将由我和我的博士生共同指导。</span>
 				</p>
 				<p><strong>欢迎有意加入本课题组的人员发邮件咨询： lironghuabit@126.com</strong> </p>
-			</div>
 
-			<div class="con01_t" style="font-size: 24px; color: red; font-weight: bold;">
-				<h4 style="color:rgb(255, 0, 0)">News</h4> 
-				<p>
+				<p style="font-size: 24px; color: red; font-weight: bold;">
 					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/图机器学习入门Tutorial.pdf" >这个文档</a>。
 				</p>
 			</div>
@@ -155,11 +152,11 @@
 				<p>
 					<span style='font-size:12.0pt'><strong>博士生</strong></span></br>
 					<p style='margin-top:0px'><a href="https://mhliao516.github.io/" >廖美昊(2020级)</a>，李泽宁(2021级)，<a href="https://xkli-allen.github.io/" >李洵楷(2022级)</a>，邬征宇(2022级)，吴佳毅(2022级)，
-						叶小伟(2023级)，蒋佳祺(2023级)，周俊杰(2023级)</p>
+						叶小伟(2023级)，蒋佳祺(2023级)，周俊杰(2023级)，曾越(2024级)，吴翔(2024级)</p>
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>硕士生</strong></span></br>
-					<p style='margin-top:0px'>曾越(2021级)，马泽航(2021级)，胡仲则(2021级)，崔冬航(2022级)，孟雨辰(2022级)，侯景乐(2022级)，孙赫男(2022级)，付俊华(2022级)，马渊沐(2022级)，
+					<p style='margin-top:0px'>崔冬航(2022级)，孟雨辰(2022级)，侯景乐(2022级)，孙赫男(2022级)，付俊华(2022级)，马渊沐(2022级)，
 						李诚(2023级)，杨世宇(2023级)，于瀚文(2023级)，左丰源(2023级)
 					</p>
 				</p>
