--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1131,8 +1131,8 @@ border="0" cellpadding="0">
 				<!-- /* VLDB */ -->
 					<p>
 						Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren Wang. Efficient Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB 2024.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a> -->
-						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Algorithms for Density Decomposition on Large Static and Dynamic Graphs.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/Density_Decomposition_Computation">(code)</a>
 					</p>
 					<p>
 						Xunkai Li, Meihao Liao, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang: LightDiC: A Simple yet Effective Approach for Large-scale Digraph Representation Learning. VLDB 2024.	
@@ -1146,8 +1146,8 @@ border="0" cellpadding="0">
 					</p>
 					<p>
 						Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang. Efficient Algorithms for Pseudoarboricity Computation in Large Static and Dynamic Graphs. VLDB 2024.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a> -->
-						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Algorithms for Pseudoarboricity Computation in Large Static and Dynamic Graphs.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/Pseudoarboricity-Computation">(code)</a>
 					</p>
 				
 				<!-- /* KDD */ -->
