--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 			<!-- /* SIGMOD */ -->
 			<p>
 				Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Guoren Wang. Theoretically and Practically Efficient Maximum Defective Clique Search. SIGMOD 2025.
-				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Theoretically and Practically Efficient Maximum Defective Clique Search.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/dawhc/MaximumDefectiveClique">(code)</a>
 			</p>
 
 			<p>
@@ -217,8 +217,8 @@
 			<!-- /* CIKM */ -->
 			<p>
 				Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
-				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
 			</p>
 
 			<!-- /* ICDE */ -->
@@ -836,7 +836,7 @@
 		class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2024.9.19
+				Rong-Hua Li</a> | 更新时间2024.10.26
 		</div>
 	</div>
 	<!-- end of footer -->
