--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1066,8 +1066,8 @@ border="0" cellpadding="0">
 			<!-- /* SIGMOD */ -->
 			<p>
 				Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Guoren Wang. Theoretically and Practically Efficient Maximum Defective Clique Search. SIGMOD 2025.
-				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Theoretically and Practically Efficient Maximum Defective Clique Search.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/dawhc/MaximumDefectiveClique">(code)</a>
 			</p>
 
 			<p>
@@ -1087,8 +1087,8 @@ border="0" cellpadding="0">
 			<!-- /* CIKM */ -->
 			<p>
 				Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang. Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024. 
-				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
 			</p>
 
 			<!-- /* ICDE */ -->
