--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<p>
 					<span style='font-size:12.0pt'><strong>博士生</strong></span></br>
 					<p style='margin-top:0px'><a href="https://mhliao516.github.io/" >廖美昊(2020级)</a>，李泽宁(2021级)，<a href="https://xkli-allen.github.io/" >李洵楷(2022级)</a>，邬征宇(2022级)，吴佳毅(2022级)，
-						叶小伟(2023级)，蒋佳祺(2023级)，周俊杰(2023级)，曾越(2024级)，吴翔(2024级)</p>
+						叶小伟(2023级)，蒋佳祺(2023级)，周俊杰(2023级)，曾越(2024级)，吴翔(2024级)，邢宝(2024级)</p>
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>硕士生</strong></span></br>
@@ -163,8 +163,8 @@
 				<p>
 					<span style='font-size:12.0pt'><strong>已毕业博士生</strong></span></br>
 					<p style='margin-top:0px'>1.秦宏超（2015-2020在读博士，博士期间一作发表ICDE 1篇，TKDE 1篇，TBD 1篇），北京理工大学博士后，北京理工大学助理教授</p>
-					<p style='margin-top:0px'>2.张琦 (2018-2022在读博士，博士期间一作发表ICDE 3篇，TKDE 2篇)，北京理工大学博士后</p>
-					<p style='margin-top:0px'>3.代强强 (2019-2023在读博士，博士期间一作发表SIGMOD 3篇，TKDE 1篇，CIKM 2篇)，北京理工大学博士后</p>
+					<p style='margin-top:0px'>2.张琦 (2018-2022在读博士，博士期间一作发表ICDE 3篇，TKDE 2篇)，北京理工大学博士后（获批博士后站前基金资助、博士后面上基金），北京科技大学副教授</p>
+					<p style='margin-top:0px'>3.代强强 (2019-2023在读博士，博士期间一作发表SIGMOD 3篇，TKDE 1篇，CIKM 2篇)，北京理工大学博士后（获得2024年度CCF优博、博新计划、博士后面上基金、国家青年科学基金项目资助）</p>
 				</p>
 				<p><strong>课题组已毕业硕士生绝大多数都进入国内头部IT企业或者国企工作。</strong> </p>
 
@@ -172,6 +172,7 @@
 
 			<div class="con01_t" id="papers">
 				<h4>主要学术论文</h4>
+				<div>
 <!-- /* 顺序：PODS,SIGMOD,VLDB,ICDE,AAAI,WWW */ -->
 	
 
@@ -180,10 +181,11 @@
 <!-- /* 2025年 */ -->
 			<!-- /* Accepted */ -->
 			<p>
-				Yuchen Meng, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Xiang Wu, Huanzhong Duan, Yanxiong Lu, Guoren Wang. Encoding Group Interests with Persistent Homology for Personalized Search. IEEE Transactions on Systems, Man, and Cybernetics: Systems (Accepted).
+				Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang. Colorful Star Motif Counting: Concepts, Algorithms and Applications. IEEE Transactions on Knowledge and Data Engineering (Accepted).
 				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 			</p>
+
 			<p>
 				Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous Graph Based Hawkes Process. IEEE Transactions on Big Data (Accepted).
 				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
@@ -195,6 +197,30 @@
 
 			<!-- /* SIGMOD */ -->
 			<p>
+				Lantian Xu, Dong Wen, Lu Qin, <strong>Rong-Hua Li</strong>, Ying Zhang, Yang Lu, Xuemin Lin. Minimum Spanning Tree Maintenance in Dynamic Graphs. SIGMOD 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<p>
+				Meihao Liao, Cheng Li, <strong>Rong-Hua Li*</strong>, Guoren Wang. Efficient Index Maintenance for Effective Resistance Computation on Evolving Graphs. SIGMOD 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Index Maintenance for Effective Resistance Computation on Evolving Graphs.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/mhliao0516/LEindex">(code)</a>
+			</p>
+
+			<p>
+				Yalong Zhang (本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang. Density Decomposition of Bipartite Graphs. SIGMOD 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Density Decomposition of Bipartite Graphs.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/Flydragonet/ab-dense-subgraph">(code)</a>
+			</p>
+
+			<p>
+				Yalong Zhang (本科生), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu Qin, Guoren Wang. Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
+				<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<p>
 				Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Guoren Wang. Theoretically and Practically Efficient Maximum Defective Clique Search. SIGMOD 2025.
 				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Theoretically and Practically Efficient Maximum Defective Clique Search.pdf">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/dawhc/MaximumDefectiveClique">(code)</a>
@@ -202,15 +228,27 @@
 
 			<p>
 				Lantian Xu, Dong Wen, Lu Qin, <strong>Rong-Hua Li</strong>, Ying Zhang, Xuemin Lin. Constant-time Connectivity Querying in Dynamic Graphs. SIGMOD 2025.
-				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Constant-time Connectivity Querying in Dynamic Graphs.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 			</p>
 
 			<!-- /* VLDB */ -->
 			<p>
-				Yuchen Meng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Xunkai Li, Guoren Wang. Topology-preserving Graph Coarsening: An Elementary Collapse-based Approach. VLDB 2025.
+				Qi Zhang, Yalong Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate Anchored Densest Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
 				<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
+
+			<p>
+				Xunkai Li, Yinlin Zhu, Boyang Pang, Guochen Yan, Yeyu Yan, Zening Li, Zhengyu Wu, Wentao Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. OpenFGL: A Comprehensive Benchmark for Federated Graph Learning. VLDB 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/OpenFGL  A Comprehensive Benchmark for Federated Graph Learning.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/xkLi-Allen/OpenFGL">(code)</a>
+			</p>
+
+			<p>
+				Yuchen Meng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Xunkai Li, Guoren Wang. Topology-preserving Graph Coarsening: An Elementary Collapse-based Approach. VLDB 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Topology-preserving Graph Coarsening  An Elementary Collapse-based Approach.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/Shiina-Mashiro-M/GEC">(code)</a>
 			</p>
 
 
@@ -222,12 +260,29 @@
 			</p>
 
 			<!-- /* ICDE */ -->
+			<p>
+				Qi Zhang, <strong>Rong-Hua Li*</strong>, Zifan Zheng, Hongchao Qin, Ye Yuan, Guoren Wang. Efficient Maximum Fair Clique Search over Large Networks. ICDE 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Maximum Fair Clique Search over Large Networks.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/fan2goa1/MaximumFairClique">(code)</a>
+			</p>
 
 
 			<!-- /* AAAI */ -->
 
 
 			<!-- /* WWW */ -->
+
+			<p>
+				Xunkai Li, Daohan Su, Zhengyu Wu, Guang Zeng, Hongchao Qin, <strong>Rong-Hua Li*</strong>, Guoren Wang. Toward Effective Digraph Representation Learning: A Magnetic Adaptive Propagation based Approach. WWW 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Toward Effective Digraph Representation Learning  A Magnetic Adaptive Propagation based Approach.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/xkLi-Allen/MAP">(code)</a>
+			</p>
+
+			<p>
+				<strong>Rong-Hua Li</strong>, Xiaowei Ye, Fusheng Jin, Yu-Ping Wang, Ye Yuan, Guoren Wang: Counting Cohesive Subgraphs with Hereditary Properties. WWW 2025.
+				&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Counting Cohesive Subgraphs with Hereditary Properties.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+			</p>
 
 
 			<!-- /* TKDE */ -->
@@ -344,6 +399,12 @@
 					Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongzhi Chen, Guoren Wang. Efficient k-Clique Counting on Large Graphs: The Power of Color-Based Sampling Approaches. IEEE Transactions on Knowledge and Data Engineering, 2024.
 					&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient_kk-Clique_Counting_on_Large_Graphs_The_Power_of_Color-Based_Sampling_Approaches.pdf">(pdf)</a>
 					&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/tripath_tkde">(code)</a>
+				</p>
+
+				<p>
+					Yuchen Meng, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Xiang Wu, Huanzhong Duan, Yanxiong Lu, Guoren Wang. Encoding Group Interests with Persistent Homology for Personalized Search. IEEE Transactions on Systems, Man, and Cybernetics: Systems (Accepted).
+					&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Encoding Group Interests With Persistent Homology for Personalized Search.pdf">(pdf)</a>
+					<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 				</p>
 
 			
@@ -757,6 +818,7 @@
 					<strong>Rong-Hua Li</strong>, Jeffrey Xu Yu, Jianquan Liu. Link prediction: the power of maximal entropy random walk. CIKM 2011: 1147-1156
 					&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Link prediction the power of maximal entropy random walk.pdf">(pdf)</a>
 				</p>
+				</div>
 			</div>
 
 			<div class="con01_t">
@@ -803,9 +865,11 @@
 			<div class="con01_t">
 				<h4>承担课程</h4>
 
+				<p>Oceanbase高级数据库技术，2023年秋季，2024年秋季，北京理工大学</p>
+
 				<p>图神经网络（大数据特色课程），2022年春季，2023年春季，2024年春季，北京理工大学</p>
 
-				<p>大数据应用算法，2022年秋季，2023年秋季，北京理工大学</p>
+				<p>大数据应用算法，2022年秋季，2023年秋季，2024年秋季北京理工大学</p>
 
 				<p>数据结构与算法，2020年秋季、2021年秋季，北京理工大学</p>
 
@@ -836,7 +900,7 @@
 		class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2024.10.26
+				Rong-Hua Li</a> | 更新时间2025.2.15
 		</div>
 	</div>
 	<!-- end of footer -->
