--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="con01_t" id="papers">
 				<h4>主要学术论文</h4>
 				<div>
-					<!-- /* 顺序：PODS,SIGMOD,VLDB,ICDE,AAAI,WWW */ -->
+					<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 					<!-- /* 2025年 */ -->
 					<span style='font-size:16.0pt'><strong>2025</strong></span></br>
@@ -222,14 +222,14 @@
 					</p>
 
 					<p>
-						Yalong Zhang (本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang.
+						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang.
 						Density Decomposition of Bipartite Graphs. SIGMOD 2025.
 						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Density Decomposition of Bipartite Graphs.pdf">(pdf)</a>
 						&nbsp;&nbsp;&nbsp;<a href="https://github.com/Flydragonet/ab-dense-subgraph">(code)</a>
 					</p>
 
 					<p>
-						Yalong Zhang (本科生), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu Qin, Guoren Wang.
+						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu Qin, Guoren Wang.
 						Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
 						<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
 						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
@@ -253,7 +253,7 @@
 
 					<!-- /* VLDB */ -->
 					<p>
-						Qi Zhang, Yalong Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate Anchored Densest
+						Qi Zhang, Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate Anchored Densest
 						Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
@@ -276,15 +276,7 @@
 						&nbsp;&nbsp;&nbsp;<a href="https://github.com/Shiina-Mashiro-M/GEC">(code)</a>
 					</p>
 
-
-					<!-- /* CIKM */ -->
-					<p>
-						Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang.
-						Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024.
-						&nbsp;&nbsp;&nbsp;<a
-							href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
-						&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
-					</p>
+					<!-- /* KDD */ -->
 
 					<!-- /* ICDE */ -->
 					<p>
@@ -297,7 +289,6 @@
 
 
 					<!-- /* AAAI */ -->
-
 
 					<!-- /* WWW */ -->
 
@@ -318,9 +309,9 @@
 						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
-
 					<!-- /* TKDE */ -->
 
+					<!-- /* CIKM */ -->
 
 					<!-- /* IJCAI */ -->
 
@@ -358,7 +349,7 @@
 
 					<!-- /* VLDB */ -->
 					<p>
-						Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren Wang. Efficient
+						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren Wang. Efficient
 						Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Efficient Algorithms for Density Decomposition on Large Static and Dynamic Graphs.pdf">(pdf)</a>
@@ -381,7 +372,7 @@
 						&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/QTCS">(code)</a>
 					</p>
 					<p>
-						Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang.
+						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin, Guoren Wang.
 						Efficient Algorithms for Pseudoarboricity Computation in Large Static and Dynamic Graphs. VLDB
 						2024.
 						&nbsp;&nbsp;&nbsp;<a
@@ -463,15 +454,6 @@
 						&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/ATP">(code)</a>
 					</p>
 
-					<!-- /* IJCAI */ -->
-					<p>
-						Yinlin Zhu, Xunkai Li, Zhengyu Wu, Di Wu, Miao Hu, <strong>Rong-Hua Li</strong>. FedTAD:
-						Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning. IJCAI 2024.
-						&nbsp;&nbsp;&nbsp;<a
-							href="./PaperFiles/FedTAD Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.pdf">(pdf)</a>
-						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/">(code)</a> -->
-					</p>
-
 					<!-- /* TKDE */ -->
 					<p>
 						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongzhi Chen, Guoren Wang.
@@ -491,6 +473,23 @@
 						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
+					<!-- /* CIKM */ -->
+					<p>
+						Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren Wang.
+						Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM 2024.
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
+					</p>
+
+					<!-- /* IJCAI */ -->
+					<p>
+						Yinlin Zhu, Xunkai Li, Zhengyu Wu, Di Wu, Miao Hu, <strong>Rong-Hua Li</strong>. FedTAD:
+						Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning. IJCAI 2024.
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/FedTAD Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.pdf">(pdf)</a>
+						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/">(code)</a> -->
+					</p>
 
 					<!-- 2024更新完毕 -->
 
@@ -642,7 +641,7 @@
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Efficient Personalized PageRank Computation The Power of Variance-Reduced Monte Carlo Approaches_slides.pptx">(slide)</a>
 					</p>
-					
+
 					<!-- /* 2022 */ -->
 					<span style='font-size:16.0pt'><strong>2022</strong></span></br>
 
