--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1249,10 +1249,10 @@ w\:* {behavior:url(#default#VML);}
 									style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
 							<div id="papers">
 								<div>
-									<!-- /* 顺序：PODS,SIGMOD,VLDB,ICDE,AAAI,WWW */ -->
+									<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 									<!-- /* 2025年 */ -->
-									<span style='font-size:12.0pt'><strong>2025</strong></span></br>
+									<span style='font-size:16.0pt'><strong>2025</strong></span></br>
 									<!-- /* Accepted */ -->
 									<p>
 										Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan,
@@ -1297,7 +1297,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang (undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
 										Qin, Guoren Wang.
 										Density Decomposition of Bipartite Graphs. SIGMOD 2025.
 										&nbsp;&nbsp;&nbsp;<a
@@ -1307,7 +1307,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang (undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu
 										Qin, Guoren Wang.
 										Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
 										<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
@@ -1335,8 +1335,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Qi Zhang, Yalong Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate
-										Anchored Densest
+										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren Wang.
+										Approximate Anchored Densest
 										Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
 										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
@@ -1363,17 +1363,7 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/Shiina-Mashiro-M/GEC">(code)</a>
 									</p>
 
-
-									<!-- /* CIKM */ -->
-									<p>
-										Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren
-										Wang.
-										Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM
-										2024.
-										&nbsp;&nbsp;&nbsp;<a
-											href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
-										&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
-									</p>
+									<!-- /* KDD */ -->
 
 									<!-- /* ICDE */ -->
 									<p>
@@ -1388,7 +1378,6 @@ w\:* {behavior:url(#default#VML);}
 
 
 									<!-- /* AAAI */ -->
-
 
 									<!-- /* WWW */ -->
 
@@ -1412,16 +1401,16 @@ w\:* {behavior:url(#default#VML);}
 										<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 									</p>
 
-
 									<!-- /* TKDE */ -->
 
+									<!-- /* CIKM */ -->
 
 									<!-- /* IJCAI */ -->
 
 									<!-- 2025更新完毕 -->
 
 									<!-- /* 2024年 */ -->
-									<span style='font-size:12.0pt'><strong>2024</strong></span></br>
+									<span style='font-size:16.0pt'><strong>2024</strong></span></br>
 									<!-- /* Accepted */ -->
 
 									<!-- /* PODS */ -->
@@ -1459,7 +1448,7 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren
 										Wang. Efficient
 										Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB
 										2024.
@@ -1486,8 +1475,8 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/QTCS">(code)</a>
 									</p>
 									<p>
-										Yalong Zhang, <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu Qin,
-										Guoren Wang.
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Qin, Guoren Wang.
 										Efficient Algorithms for Pseudoarboricity Computation in Large Static and
 										Dynamic Graphs. VLDB
 										2024.
@@ -1583,17 +1572,6 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/ATP">(code)</a>
 									</p>
 
-									<!-- /* IJCAI */ -->
-									<p>
-										Yinlin Zhu, Xunkai Li, Zhengyu Wu, Di Wu, Miao Hu, <strong>Rong-Hua Li</strong>.
-										FedTAD:
-										Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.
-										IJCAI 2024.
-										&nbsp;&nbsp;&nbsp;<a
-											href="./PaperFiles/FedTAD Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.pdf">(pdf)</a>
-										<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/">(code)</a> -->
-									</p>
-
 									<!-- /* TKDE */ -->
 									<p>
 										Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongzhi Chen, Guoren
@@ -1617,11 +1595,32 @@ w\:* {behavior:url(#default#VML);}
 										<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 									</p>
 
+									<!-- /* CIKM */ -->
+									<p>
+										Zening Li,<strong>Rong-Hua Li*</strong>, Meihao Liao, Fusheng Jin and Guoren
+										Wang.
+										Privacy-Preserving Graph Embedding based on Local Differential Privacy, CIKM
+										2024.
+										&nbsp;&nbsp;&nbsp;<a
+											href="./PaperFiles/Privacy-Preserving Graph Embedding based on Local Differential.pdf">(pdf)</a>
+										&nbsp;&nbsp;&nbsp;<a href="https://github.com/Zening-Li/PrivGE">(code)</a>
+									</p>
+
+									<!-- /* IJCAI */ -->
+									<p>
+										Yinlin Zhu, Xunkai Li, Zhengyu Wu, Di Wu, Miao Hu, <strong>Rong-Hua Li</strong>.
+										FedTAD:
+										Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.
+										IJCAI 2024.
+										&nbsp;&nbsp;&nbsp;<a
+											href="./PaperFiles/FedTAD Topology-aware Data-free Knowledge Distillation for Subgraph Federated Learning.pdf">(pdf)</a>
+										<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/">(code)</a> -->
+									</p>
 
 									<!-- 2024更新完毕 -->
 
 									<!-- /* 2023年 */ -->
-									<span style='font-size:12.0pt'><strong>2023</strong></span></br>
+									<span style='font-size:16.0pt'><strong>2023</strong></span></br>
 
 									<p>
 										Guoren Wang, Yue Zeng, <strong>Rong-Hua Li</strong>, Hongchao Qin, Xuanhua Shi,
@@ -1808,7 +1807,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<!-- /* 2022 */ -->
-									<span style='font-size:12.0pt'><strong>2022</strong></span></br>
+									<span style='font-size:16.0pt'><strong>2022</strong></span></br>
 
 									<p>
 										Yu-Xuan Qiu, Dong Wen, Lu Qin, Wentao Li, <strong>Rong-Hua Li</strong>, Ying
@@ -2006,7 +2005,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<!-- 2022之前 -->
-									<span style='font-size:12.0pt'><strong>*~2021</strong></span></br>
+									<span style='font-size:16.0pt'><strong>*~2021</strong></span></br>
 
 									<p>
 										<strong>Rong-Hua Li</strong>, Qiangqiang Dai, Lu Qin, Guoren Wang, Xiaokui Xiao,
