--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 			clear: both;
 		}
 
+		.con01_t .stress {
+			font-size: 16px;
+		}
+
 		/*学生详情页*/
 		.group_grjj {
 			vertical-align: top;
@@ -119,7 +123,7 @@
 			<div class="con01_t">
 				<h4>研究兴趣</h4>
 				<p>
-					图数据管理与挖掘，知识图谱、图学习与大模型、图论算法的设计与分析、谱图理论、图计算及其在金融、制造等交叉领域的应用。
+					图数据管理与挖掘，知识图谱、图学习与大模型、图论算法的设计与分析、谱图理论、图计算及其在金融、制造等交叉领域的应用、AI4Science。
 				</p>
 			</div>
 
@@ -137,7 +141,7 @@
 				<p><strong>欢迎有意加入本课题组的人员发邮件咨询： lironghuabit@126.com</strong> </p>
 
 				<p style="font-size: 24px; color: red; font-weight: bold;">
-					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/图机器学习入门Tutorial.pdf">这个文档</a>。
+					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/从零开始做科研.pdf">这个文档</a>。
 				</p>
 			</div>
 
@@ -177,9 +181,25 @@
 
 			</div>
 
-			<div class="con01_t" id="papers">
+			<div class="con01_t" >
+				<h4>Benchmark工作（已开源）</h4>
+				<div class="stress">
+					<p>
+						[VLDB'25] - Federated Graph Learning
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/OpenFGL  A Comprehensive Benchmark for Federated Graph Learning.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/xkLi-Allen/OpenFGL">(code)</a>
+					</p>
+
+					<p>
+						[arXiv'25] - Graph Unlearning
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/OpenGU  A Comprehensive Benchmark for Graph Unlearning.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/bwfan-bit/OpenGU">(code)</a>
+					</p>
+				</div>
 				<h4>主要学术论文</h4>
-				<div>
+				<div id="papers">
 					<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 					<!-- /* 2025年 */ -->
@@ -1224,7 +1244,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.2.15
+				Rong-Hua Li</a> | 更新时间2025.3.15
 		</div>
 	</div>
 	<!-- end of footer -->
